z-index fix

--- a/assets/styles/index-input.css
+++ b/assets/styles/index-input.css
@@ -10,6 +10,9 @@
 	flex-flow: row nowrap;
 	order: 3;
 	
+	/*keeps dropdown autocomplete on top*/
+	z-index: 1;
+	
 	transition-property: margin;
 	transition-duration: 0.5s;
 	transition-timing-function: linear;
@@ -39,8 +42,7 @@
 
 	display: flex;
 	flex-flow: row nowrap;
-	
-	z-index: 5;
+
 	max-width: calc(100% - 95px);
 	
 	transition-property: all;
@@ -135,7 +137,6 @@
 	border: 1px solid #d4d4d4;
 	border-bottom: none;
 	border-top: none;
-	z-index: -3;
 	/*position the autocomplete items to be the same width as the container:*/
 	top: 100%;
 	left: 0;
