--- a/assets/styles/index-landing.css
+++ b/assets/styles/index-landing.css
@@ -3,7 +3,7 @@
 	
 	display: flex;
 	flex-flow: column nowrap;
-	z-index: 1;
+	z-index: 0;
 	order: 2;
 
 	transform: scaleY(1);
